--- a/Pages/ItemDetailPage.xaml
+++ b/Pages/ItemDetailPage.xaml
@@ -1,37 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:helpers="clr-namespace:Zinote.Helpers"
+             xmlns:components="clr-namespace:Zinote.Resources.Components"
              x:Class="Zinote.Pages.ItemDetailPage"
              Title="Item Details">
     <Shell.TitleView>
-        <Grid Margin="0,0,10,0">
-            <Label Text="{helpers:Translate Details}" 
-                   FontSize="20" 
-                   FontAttributes="Bold" 
-                   VerticalOptions="Center" 
-                   HorizontalOptions="Center" 
-                   TextColor="{DynamicResource DynamicShellTitleColor}"/>
-            
-            <HorizontalStackLayout HorizontalOptions="End" VerticalOptions="Center" Spacing="15">
-                <Label x:Name="LanguageLabel" Text="EN" 
-                       FontSize="16" FontAttributes="Bold"
-                       VerticalOptions="Center"
-                       TextColor="{DynamicResource DynamicShellTitleColor}">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OnLanguageClicked"/>
-                    </Label.GestureRecognizers>
-                </Label>
-                <Label Text="{DynamicResource DynamicThemeIcon}" 
-                       FontSize="22" 
-                       VerticalOptions="Center" 
-                       TextColor="{DynamicResource DynamicShellTitleColor}">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OnThemeClicked"/>
-                    </Label.GestureRecognizers>
-                </Label>
-            </HorizontalStackLayout>
-        </Grid>
+        <components:HeaderView TitleText="{helpers:Translate Details}" />
     </Shell.TitleView>
 
     <ScrollView BackgroundColor="{DynamicResource DynamicPageBackground}">
@@ -117,8 +91,8 @@
 
             <!-- Actions -->
             <HorizontalStackLayout Spacing="20" HorizontalOptions="Center" Margin="0,10,0,20">
-                <Button Text="{helpers:Translate Save}" Clicked="OnSaveClicked" WidthRequest="120" HeightRequest="45" CornerRadius="22" BackgroundColor="{DynamicResource DynamicAccent}" TextColor="{DynamicResource DynamicButtonText}" FontAttributes="Bold"/>
-                <Button Text="{helpers:Translate Cancel}" Clicked="OnCancelClicked" WidthRequest="120" HeightRequest="45" CornerRadius="22" BackgroundColor="{DynamicResource DynamicBorder}" TextColor="{DynamicResource DynamicPrimaryText}" FontAttributes="Bold"/>
+                <Button x:Name="SaveButton" Text="{helpers:Translate Save}" Clicked="OnSaveClicked" WidthRequest="120" HeightRequest="45" CornerRadius="22" BackgroundColor="{DynamicResource DynamicAccent}" TextColor="{DynamicResource DynamicButtonText}" FontAttributes="Bold"/>
+                <Button x:Name="CancelButton" Text="{helpers:Translate Cancel}" Clicked="OnCancelClicked" WidthRequest="120" HeightRequest="45" CornerRadius="22" BackgroundColor="{DynamicResource DynamicBorder}" TextColor="{DynamicResource DynamicPrimaryText}" FontAttributes="Bold"/>
             </HorizontalStackLayout>
         </VerticalStackLayout>
     </ScrollView>
